# voxly

./: .env.example  .gitignore  README.md  RESEARCH.md  Voooxly.spec  Voxly.spec  config.yaml  pyproject.toml  voxly.entitlements
assets/: Voxly.icns
docs/: RELEASING.md
docs/superpowers/specs/: 2026-07-18-voxly-distribution-design.md  2026-07-19-landing-redesign-design.md
scripts/: bundle-whisper.sh  deploy.sh  install-app.sh  install.sh  launch.sh  make-cert.sh  make-icon.py  package.sh  release.sh
src/dictador/: __init__.py  __main__.py  app.py  audio.py  config.py  hotkey.py  modes.py  onboarding.py  output.py  overlay.py  refine.py  setup_checks.py  stats.py  stt.py  updates.py
src/voooxly/: __init__.py  ai_settings.py  app.py  hotkey.py  installer_cleanup.py  keys.py  modes.py  onboarding.py  output.py  providers.py  refine.py  settings_window.py  shortcuts.py  stats.py  stt.py  theme.py  updates.py
tests/: test_ai_menu.py  test_ai_settings.py  test_alt_gr_hotkey.py  test_app_shortcuts.py  test_apply_ai_selection.py  test_audio_watchdog.py  test_cancel_hotkey.py  test_combo_hotkey.py  test_deliver_status.py  test_detect_backend.py  test_guard_hotkey.py  test_hotkey_captura.py  test_hotkey_rebind.py  test_installer_cleanup.py  test_keys.py  test_language_defaults.py  test_latch_hotkey.py  test_modes.py  test_notifications.py  test_onboarding.py  test_openai_payload.py  test_paste_controller.py  test_providers.py  test_reconfigure_hotkey.py  test_record_token_usage.py  test_refine_fallback.py  test_refine_usage.py  test_restart_hotkey_hilo_principal.py  test_restart_hotkey_main_thread.py  test_settings_captura.py  test_settings_chips.py  test_settings_keyboard.py  test_settings_window.py  test_setup_checks.py  test_shortcuts.py  test_shortcuts_conflictos.py  test_stats.py  test_stt_timeout.py  test_theme.py  test_updates.py  (+1 more)
web/: appcast.json  index.html  vercel.json
