[project]
name = "dictador"
version = "0.1.0"
description = "Dictado local pro tipo Wispr Flow: STT on-device + LLM que ordena/mejora tus ideas, con modos."
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "webrtcvad>=2.0.10",
    "setuptools<81",
    "pynput>=1.7.6",
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "anthropic>=0.40",
]

[project.scripts]
dictador = "dictador.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dictador"]