[project]
name = "voooxly"
version = "1.5.1"
description = "Dictado local pro tipo Wispr Flow: STT on-device + LLM que ordena/mejora tus ideas, con modos."
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "webrtcvad>=2.0.10",
    "setuptools<81",
    "pynput>=1.7.6",
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
    "pyobjc-framework-AVFoundation>=10.0",
    "pyobjc-framework-Security>=10.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "anthropic>=0.40",
]

[project.scripts]
voooxly = "voooxly.__main__:main"

[dependency-groups]
dev = ["pytest>=8.0", "pyinstaller>=6.0", "dmgbuild>=1.6"]

[tool.pytest.ini_options]
# El layout es src/, así que la suite necesita src en sys.path. Declararlo aquí
# en vez de depender del editable install: en macOS basta con que el .pth del
# venv tenga el flag UF_HIDDEN para que site.addpackage() lo ignore en silencio
# —sin excepción ni aviso— y entonces ni siquiera se pueden importar los tests.
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voooxly"]